AnnouncementFlow/force-app/main/default/objects/Notice_board__c/Notice_board__c.object-meta.xml
<CustomObject>
    <label>Notice board</label>
    <nameField>
        <label>Notice board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>