AnnouncementFlow/force-app/main/default/objects/Notice_board__c/fields/Default_Image__c.field-meta.xml
<CustomField>
    <fullName>Default_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a default accouncement?</label>
    <type>Checkbox</type>
</CustomField>