AnnouncementFlow/force-app/main/default/objects/Notice_board__c/fields/Display_Footer__c.field-meta.xml
<CustomField>
    <fullName>Display_Footer__c</fullName>
    <label>Display Footer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>