AnnouncementFlow/force-app/main/default/objects/Notice_board__c/fields/Display_Heading__c.field-meta.xml
<CustomField>
    <fullName>Display_Heading__c</fullName>
    <label>Display Heading</label>
    <length>50</length>
    <type>Text</type>
</CustomField>