AnnouncementFlow/force-app/main/default/objects/Notice_board__c/fields/Display_Text__c.field-meta.xml
<CustomField>
    <fullName>Display_Text__c</fullName>
    <label>Display Text</label>
    <type>TextArea</type>
</CustomField>