AnnouncementFlow/force-app/main/default/objects/Notice_board__c/fields/end_date_time__c.field-meta.xml
<CustomField>
    <fullName>end_date_time__c</fullName>
    <label>End date/time</label>
    <type>DateTime</type>
</CustomField>