AnnouncementFlow/force-app/main/default/objects/Notice_board__c/fields/Start_date_time__c.field-meta.xml
<CustomField>
    <fullName>Start_date_time__c</fullName>
    <label>Start date/time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>