AnnouncementFlow/force-app/main/default/objects/Notice_board__c/validationRules/EndDateGreaterThanStart.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateGreaterThanStart</fullName>
    <active>true</active>
    <errorConditionFormula>IF( end_date_time__c  &lt;  Start_date_time__c ,True,false)</errorConditionFormula>
    <errorMessage>End Date/time should be ahead of Start Date/time</errorMessage>
</ValidationRule>