AnnouncementFlow/force-app/main/default/objects/Notice_board__c/validationRules/NoEndDateForDefaultImage.validationRule-meta.xml
<ValidationRule>
    <fullName>NoEndDateForDefaultImage</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Default_Image__c ,true,false) 

&amp;&amp;

  IF( ISNULL( end_date_time__c ) , false, true)</errorConditionFormula>
    <errorDisplayField>end_date_time__c</errorDisplayField>
    <errorMessage>Default annoucement should not have End Date</errorMessage>
</ValidationRule>